2005-02-12 13:58  Alexander Malmberg  <alexander@malmberg.org>

	* Headers/x11/XGServerWindow.h: Make the border and depth ivars
	unsigned.

2005-02-12 13:54  Alexander Malmberg  <alexander@malmberg.org>

	* Source/x11/XGServerWindow.m (setNormalHints): If the window isn't
	resizable, force the min and max sizes to be equal to the current
	size.
	(-placewindow::): Set the hints after updating xframe.

	Fixes bug #11713.

2005-02-10 00:50  Alexander Malmberg  <alexander@malmberg.org>

	* Tools/gpbs.m (init): Remove the program name from the arguments
	passed to the new task.

2005-02-08 Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gpbs.m: Use NSTask to re-execute as daemon.

2005-02-05 00:44  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/path.m (-_clip_add_svp:): Handle the case where
	no spans are generated for the path.

2005-01-31 07:30  Christian <christian@tenbyten.com>

	* Tools/gpbs.m: Correct missplaced bracket when built for windows.

2005-01-21 21:51  Alexander Malmberg  <alexander@malmberg.org>

	Various warning and whitespace cleanups.

	* Headers/x11/XGServerWindow.h,
 	* Source/art/ftfont.m,
	* Source/gsc/GSGState.m,
	* Source/win32/WIN32Server.m,
	* Source/x11/XGDragView.m,
	* Source/x11/XGServerEvent.m,
	* Source/x11/XGServerWindow.m: Change signedness of various
	variables.
	* Tools/gpbs.m: Add missing ctype.h include.
	* Source/x11/XGDrawView.m (-_setCursor): Initialize variables.

2005-01-20 22:39  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ARTContext.m (-initWithContextInfo:): Enable stroke
	adjusting for the default gstate.

2005-01-20 17:58  Alexander Malmberg  <alexander@malmberg.org>

	* Source/xlib/XGGState.m (-DPSrectstroke::::): Don't decrease
	the width/height.

2005-01-15  Adrian Robert <arobert@cogsci.ucsd.edu>

	* Source/x11/XGServerEvent.m (-processEvent:): For XdndPosition
	event (ClientMessage), convert the point from root coordinates